Added updates and fixes froom class

--- a/01-PythonProgramming/01-IntroProgrammingPython.ipynb
+++ b/01-PythonProgramming/01-IntroProgrammingPython.ipynb
@@ -267,11 +267,11 @@
    "source": [
     "m = 5\n",
     "if m < 1:\n",
-    "    print (str(m) + \" is smaller than 1\")\n",
+    "    print (f\"{m} is smaller than 1\")\n",
     "elif 1 <= m <= 4:\n",
-    "    print (str(m) + \" is in between 1 and 4\")\n",
+    "    print (f\"{m} is in between 1 and 4\")\n",
     "else :\n",
-    "    print (str(m) + \" is larger than 4\")"
+    "    print (f\"{m} is larger than 4\")"
    ]
   },
   {
@@ -387,7 +387,10 @@
    "source": [
     "name = \"My name\" # a string is an array for characters\n",
     "for c in name:\n",
-    "    print (c, end=\"-\")"
+    "    print (c, end=\"-\")\n",
+    "print()\n",
+    "print(name[0])\n",
+    "print(name[-1])"
    ]
   },
   {
@@ -406,7 +409,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "52a3e0f2942cf98722118a64859427bb",
+     "checksum": "3a81dc7c34d9e4c7b7882e47d39744bc",
      "grade": false,
      "grade_id": "cell-a83db8b3e865fef8",
      "locked": false,
@@ -417,6 +420,10 @@
    },
    "outputs": [],
    "source": [
+    "# ii = 0.0\n",
+    "# while ii < 1.0:\n",
+    "#     print(ii)\n",
+    "#     ii = ii + 0.05\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
    ]
@@ -492,9 +499,9 @@
    "source": [
     "# this shows how to pass arguments\n",
     "def my_function(x):\n",
-    "    print (\"Value of argument is \" + str(x))\n",
+    "    print (f\"Value of argument is {x}\")\n",
     "    \n",
-    "# my_function() # error, requires argument\n",
+    "#my_function() # error, requires argument\n",
     "my_function(-3)\n",
     "my_function(0.9)\n"
    ]
@@ -511,7 +518,7 @@
    "source": [
     "# this shows how to pass arguments, and assign default values\n",
     "def my_function(x = 0):\n",
-    "    print \"Value of argument is \" + str(x)\n",
+    "    print (f\"Value of argument is {x}\")\n",
     "    \n",
     "my_function() # no longer an error\n",
     "my_function(-3)"
@@ -529,9 +536,9 @@
    "source": [
     "# this shows how to pass arguments, assign default values, and also calls by named arguments\n",
     "def my_function(x = 0, y = 1):\n",
-    "    print \"Calling my_function\"\n",
-    "    print \"x \" + str(x)\n",
-    "    print \"y \" + str(y)\n",
+    "    print (\"Calling my_function\")\n",
+    "    print (\"x \" + str(x))\n",
+    "    print (\"y \" + str(y))\n",
     "    \n",
     "my_function() # no longer an error\n",
     "my_function(-3, 2) # x = -3, y = -2\n",
