--- a/01-PythonProgramming/02-IntroProgrammingPython-DataStructs.ipynb
+++ b/01-PythonProgramming/02-IntroProgrammingPython-DataStructs.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fbac68bd",
    "metadata": {},
    "source": [
     "Before you turn this problem in, make sure everything runs as expected. First, **restart the kernel** (in the menubar, select Kernel$\\rightarrow$Restart) and then **run all cells** (in the menubar, select Cell$\\rightarrow$Run All).\n",
@@ -12,6 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "233f6d95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +23,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a999d0d1",
    "metadata": {},
    "source": [
     "---"
@@ -28,6 +31,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a8f36fb",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -40,12 +44,15 @@
     "\n",
     "Lists are heterogeneous and dynamic arrays which allows to group data which are not necessarily of the same type. Lists are very easy to use but, be careful, they are not the fastest struct you can use for numerical computations.\n",
     "\n",
-    "A list is declared using the ```[ ]``` characters, and its elements are separated by ```,```."
+    "A list is declared using the ```[ ]``` characters, and its elements are separated by ```,```.\n",
+    "\n",
+    "**NOTE**: Lists are NOT recommended for numerical work, it is better to use numpy arrays. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "01e62a8a",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -54,13 +61,15 @@
    "outputs": [],
    "source": [
     "xdata = [] # declares empty list\n",
+    "print (xdata)\n",
     "xdata = [1,2, 3, 6.5, 'hello'] # heterogeneous list\n",
-    "print xdata"
+    "print (xdata)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a22dc9ff",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -68,15 +77,17 @@
    },
    "outputs": [],
    "source": [
-    "print xdata[0]\n",
-    "print xdata[3]\n",
-    "print xdata[4]\n",
-    "print xdata[4][3] # Does this make sense?"
+    "# Access by indices\n",
+    "print (xdata[0])\n",
+    "print (xdata[3])\n",
+    "print (xdata[4])\n",
+    "print (xdata[4][3]) # Does this make sense?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "768fc883",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -85,39 +96,19 @@
    "outputs": [],
    "source": [
     "# Slicing operations\n",
-    "print xdata[0:2]\n",
-    "print xdata[0:3]\n",
-    "print xdata[0:4:1]\n",
-    "print xdata[:4:1]\n",
-    "print xdata[::1]\n",
-    "print xdata[::-1]\n",
-    "print xdata[:-1]"
+    "print (xdata[0:2])\n",
+    "print (xdata[0:3])\n",
+    "print (xdata[0:4:1])\n",
+    "print (xdata[:4:1])\n",
+    "print (xdata[::1])\n",
+    "print (xdata[::-1]) # inverse order\n",
+    "print (xdata[:-1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# some ways to create lists : arange\n",
-    "xdata = range(0, 10)\n",
-    "print \"xdata = \" + str(xdata)\n",
-    "xdata = range(0, 10, 2)\n",
-    "print \"xdata = \" + str(xdata)\n",
-    "xdata = range(0, 10, -1)\n",
-    "print \"xdata = \" + str(xdata)\n",
-    "xdata = xrange(0, 10)\n",
-    "print \"xdata = \" + str(xdata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "527deb9f",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -129,69 +120,29 @@
     "a = [2,3,4]\n",
     "b = [3,4,5]\n",
     "c = a + b\n",
-    "print c"
+    "print (c)\n",
+    "print (2*c)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "id": "752d342d",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "c = 3*[4]\n",
-    "print c"
+    "import numpy as np\n",
+    "a = np.array([2,3,4])\n",
+    "b = np.array([3,4,5])\n",
+    "c = a + b\n",
+    "print (c)\n",
+    "print(2*c)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "help(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "c = 5*[1]\n",
-    "print c\n",
-    "\n",
-    "c.append(\"Mundo\")\n",
-    "print c\n",
-    "\n",
-    "c.insert(2, 32)\n",
-    "print c\n",
-    "\n",
-    "c.insert(3, \"Hola\")\n",
-    "print c\n",
-    "\n",
-    "c[4:-1] = []\n",
-    "print c\n",
-    "print c[-2], c[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "49918387",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -201,11 +152,47 @@
    "source": [
     "# List comprehension\n",
     "squares = [x**2 for x in range(0, 10)]\n",
-    "print squares"
+    "print(squares)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "bce7605b",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Exercise:</b> Write a function that receives a list of numbers and returns its mean, max and min values \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f415614",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "c7b5667ce34c8a2f932866003ec64efe",
+     "grade": false,
+     "grade_id": "cell-7baeee87d8fa4204",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def stats(data):\n",
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()\n",
+    "stats([1, 2, 3.5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f061c0e3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -219,6 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf840110",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -227,15 +215,16 @@
    "outputs": [],
    "source": [
     "a = (1, 2)\n",
-    "print a\n",
-    "print a[0]\n",
+    "print (a)\n",
+    "print (a[0])\n",
     "# a[1] = 4 # error, tuple is inmutable\n",
     "b = () # empty tuple\n",
-    "print b"
+    "print (b)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "3e9dc08a",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -248,6 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e3dccd90",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -259,11 +249,12 @@
     "    return x + y, x-y # returns a tuple\n",
     "\n",
     "a, b = func(1, 2)\n",
-    "print a, b"
+    "print (a, b)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "053b2973",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -277,6 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f7cfa824",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -305,6 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4b494824",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -313,14 +306,15 @@
    "outputs": [],
    "source": [
     "p1 = Point2D() # constructs a point with default internal attributes\n",
-    "print p1 # Uses the str cast method\n",
+    "print (p1) # Uses the str cast method\n",
     "\n",
     "p2 = Point2D(2, -3)\n",
-    "print p2"
+    "print (p2)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "9f16b9ce",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -333,6 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0073aad8",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -363,6 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a9bd6fbd",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -372,7 +368,7 @@
    "source": [
     "import Point3D as P3D\n",
     "p3 = P3D.Point3D(2, 5, 0.9)\n",
-    "print p3"
+    "print (p3)"
    ]
   },
   {
@@ -380,30 +376,8 @@
    "id": "20a86234",
    "metadata": {},
    "source": [
-    "## Dictionaries in Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ac6257c",
-   "metadata": {},
-   "source": [
-    "Python provides additional data structures: sets and dictionaries."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e4247760",
-   "metadata": {},
-   "source": [
-    "## Dictionaries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5d7ed369",
-   "metadata": {},
-   "source": [
+    "## Dictionaries\n",
+    "\n",
     "Dictionaries are the analogous of associative memories or associative arrays. Basically, they are a generalized container where the key is not necessarily an integer but an arbitrary object of inmutable type, called a key (for example, tuples, a reange of number, etc, nut not a list of integers, since the last is mutable). \n",
     "\n",
     "Dictionaries can be seen as unordered sets of the pairs _key:value_, and are sourrounded by curly braces `{}`. It is posible to delete/acces/add/etc values by using the corresponding key or key/value pair. The `keys()` method for a dictionary returns the keys of that dictionary. To check for a given key, you can use the keyword `in`.\n",
@@ -418,9 +392,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creates a dictioanary with several key:value pairs. Keys are strings\n",
+    "# creates a dictionary with several key:value pairs. Keys are strings\n",
     "tel = {'jack': 4098, 'sape': 4139}  \n",
-    "print tel"
+    "print (tel)"
    ]
   },
   {
@@ -432,7 +406,7 @@
    "source": [
     "# acces  by key. If key does not exists, creates a new entry\n",
     "tel['guido'] = 4127 \n",
-    "print tel"
+    "print (tel)"
    ]
   },
   {
@@ -442,7 +416,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print tel['jack']    # Access by key"
+    "print (tel['jack'])    # Access by key"
    ]
   },
   {
@@ -453,7 +427,7 @@
    "outputs": [],
    "source": [
     "del tel['sape']    # Delete by key\n",
-    "print tel"
+    "print (tel)"
    ]
   },
   {
@@ -492,50 +466,6 @@
    "outputs": [],
    "source": [
     "'guido' in tel   # check if a key is in the dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df147079",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tel.has_key('jack') "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16a1e74e",
-   "metadata": {},
-   "source": [
-    "### Dictionaries creation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9d02de83",
-   "metadata": {},
-   "source": [
-    "Creation of an empty dictionary:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89899b5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "D = {}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "03970c09",
-   "metadata": {},
-   "source": [
-    "We can also directly build dictionaries by means of the `dict()` constructor"
    ]
   },
   {
@@ -584,8 +514,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k, v in knights.iteritems():\n",
-    "    print k, v"
+    "for k, v in knights.items():\n",
+    "    print (k, v)"
    ]
   },
   {
@@ -653,6 +583,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "88164010",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -727,5 +658,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
