Fixed Added problema set , removing hidden tests

--- a/01-PythonProgramming/problems/PS1.ipynb
+++ b/01-PythonProgramming/problems/PS1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "53c706df",
+   "id": "2da5a54a",
    "metadata": {},
    "source": [
     "Before you turn this problem in, make sure everything runs as expected. First, **restart the kernel** (in the menubar, select Kernel$\\rightarrow$Restart) and then **run all cells** (in the menubar, select Cell$\\rightarrow$Run All).\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fadbedc5",
+   "id": "c08526ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82fb6708",
+   "id": "3cb9d9d4",
    "metadata": {},
    "source": [
     "---"
@@ -222,7 +222,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "cae12219e434fbadcaceb07494418a41",
+     "checksum": "b844fb5455e0c2d59f186cc583feafea",
      "grade": false,
      "grade_id": "cell-ac4d4f37c7341bad",
      "locked": false,
@@ -243,11 +243,7 @@
     "\n",
     "def numdiff(x, h):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "\n",
-    "x = 1.2478\n",
-    "for hval in [0.5, 0.1, 0.05, 0.01, 0.005, 0.001, 0.0005, 0.0001, 0.00005, 0.00001, 1.0e-8, 1.0e-9, 1.0e-14, 1.0e-15]:\n",
-    "    print(f\"assert np.isclose({numdiff(x, hval)}, numdiff({x}, {hval}))\")"
+    "    raise NotImplementedError()"
    ]
   },
   {
@@ -259,7 +255,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "f8e8a96ba4065aa1e324df3a75589d53",
+     "checksum": "0f7c690913b3db557d086e89d80c8619",
      "grade": true,
      "grade_id": "cell-91b0fd2cf74990a5",
      "locked": true,
@@ -280,18 +276,12 @@
     "assert np.isclose(1.2246484937250557e-08, numdiff(1.2478, 1e-08)) # NOTICE: ERRORS INCREASING\n",
     "assert np.isclose(4.021997401792987e-08, numdiff(1.2478, 1e-09))\n",
     "assert np.isclose(0.0031372791395899435, numdiff(1.2478, 1e-14))\n",
-    "assert np.isclose(0.04932917985306329, numdiff(1.2478, 1e-15))\n",
-    "### BEGIN HIDDEN TEST\n",
-    "assert np.isclose(0.0004166145864309412, numdiff(1.2478, 0.05))\n",
-    "assert np.isclose(1.6666583323776685e-05, numdiff(1.2478, 0.01))\n",
-    "assert np.isclose(1.6674979175235194e-09, numdiff(1.2478, 0.0001))\n",
-    "assert np.isclose(4.135495279555812e-10, numdiff(1.2478, 5e-05))\n",
-    "### END HIDDEN TEST"
+    "assert np.isclose(0.04932917985306329, numdiff(1.2478, 1e-15))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d11d5bca",
+   "id": "29d60637",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -314,12 +304,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09607370",
+   "id": "1681ba48",
    "metadata": {
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "5e3dc7d27fc86eed91620656f8a4c4f5",
+     "checksum": "96eb9066e7b31c7665a11e103f83db1e",
      "grade": false,
      "grade_id": "cell-cfaa7f286621ee36",
      "locked": false,
@@ -337,19 +327,13 @@
     "    \n",
     "def isprime(m):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "vals = [1, 2, 3, 4, 5, 9, 12, 123, 100011, 100019, 100267]\n",
-    "for val in vals:\n",
-    "    print(f\"assert {isprime(val)} == isprime({val})\")\n",
-    "for val in vals:\n",
-    "    print(f\"assert {sumprimeslessthan(val)} == sumprimeslessthan({val})\")"
+    "    raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f563157",
+   "id": "6ae0834e",
    "metadata": {
     "deletable": false,
     "editable": false,
