Updated intro to data structs

--- a/01-PythonProgramming/02-IntroProgrammingPython-DataStructs.ipynb
+++ b/01-PythonProgramming/02-IntroProgrammingPython-DataStructs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fbac68bd",
+   "id": "d74c4c3a",
    "metadata": {},
    "source": [
     "Before you turn this problem in, make sure everything runs as expected. First, **restart the kernel** (in the menubar, select Kernel$\\rightarrow$Restart) and then **run all cells** (in the menubar, select Cell$\\rightarrow$Run All).\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "233f6d95",
+   "id": "66ae406e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a999d0d1",
+   "id": "9055d0fd",
    "metadata": {},
    "source": [
     "---"
@@ -46,7 +46,9 @@
     "\n",
     "A list is declared using the ```[ ]``` characters, and its elements are separated by ```,```.\n",
     "\n",
-    "**NOTE**: Lists are NOT recommended for numerical work, it is better to use numpy arrays. "
+    "**NOTE**: Lists are NOT recommended for numerical work, it is better to use numpy arrays. \n",
+    "\n",
+    "See: https://quickref.me/python#python-lists"
    ]
   },
   {
@@ -95,11 +97,11 @@
    },
    "outputs": [],
    "source": [
-    "# Slicing operations\n",
+    "# Slicing operations [start=0, end, increment]\n",
     "print (xdata[0:2])\n",
     "print (xdata[0:3])\n",
     "print (xdata[0:4:1])\n",
-    "print (xdata[:4:1])\n",
+    "print (xdata[:4:2])\n",
     "print (xdata[::1])\n",
     "print (xdata[::-1]) # inverse order\n",
     "print (xdata[:-1])"
@@ -120,8 +122,8 @@
     "a = [2,3,4]\n",
     "b = [3,4,5]\n",
     "c = a + b\n",
-    "print (c)\n",
-    "print (2*c)"
+    "print (c) # Concatenate the lists\n",
+    "print (2*c) # duplicate the list"
    ]
   },
   {
@@ -157,11 +159,119 @@
   },
   {
    "cell_type": "markdown",
+   "id": "041e090e",
+   "metadata": {},
+   "source": [
+    "### Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bce7605b",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Exercise:</b> Write a function that receives a list of numbers and returns its mean, max and min values \n",
+    "<b>Exercise:</b> Write a function that receives a list and prints it in reverse order every 2 elements\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "298903a1",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "504b41352f95ceee896d29e54e1db745",
+     "grade": false,
+     "grade_id": "cell-3026391270b02aad",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def printreversed(l):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a39926f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "printreversed([1, 2, 3])\n",
+    "printreversed([1, 2, 3, 4 , \"hola\", \"mundo\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50c613d3",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Exercise:</b> Write a function that receives a positive integer and returns a list with all its prime factors\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82c4c42a",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "e40344888a6fb3d84d2249b829b11640",
+     "grade": false,
+     "grade_id": "cell-dc8aaf6aaa514086",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def primefactors(n):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
+    "    \n",
+    "def isprime(n):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50919b80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(primefactors(2))\n",
+    "print(primefactors(10))\n",
+    "print(primefactors(201))\n",
+    "print(primefactors(97))\n",
+    "print(primefactors(1213427))\n",
+    "print(primefactors(1213428))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "515c86bb",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Exercise:</b> Write a function that receives a list of numbers and returns its mean, max and min values . Use numpy\n",
     "</div>"
    ]
   },
@@ -173,7 +283,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "c7b5667ce34c8a2f932866003ec64efe",
+     "checksum": "2085cd97ec686ee3cd866db0171a1f9f",
      "grade": false,
      "grade_id": "cell-7baeee87d8fa4204",
      "locked": false,
@@ -184,9 +294,20 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def stats(data):\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "555370ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "stats([1, 2, 3.5])"
    ]
   },
@@ -291,7 +412,7 @@
     "    \n",
     "    def __str__(self):\n",
     "        \"\"\"Cast method to convert to string\"\"\"\n",
-    "        return (\"Coordinates : ( %25.16e, %25.16e )\" % (self.x_, self.y_))"
+    "        return (f\"Coordinates : ( {self.x_:25.16e}, {self.y_:25.16e} )\")"
    ]
   },
   {
@@ -310,6 +431,17 @@
     "\n",
     "p2 = Point2D(2, -3)\n",
     "print (p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3031de13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<iframe width=\"800\" height=\"500\" frameborder=\"0\" src=\"https://pythontutor.com/iframe-embed.html#code=class%20Point2D%20%3A%0A%20%20%20%20%22%22%22This%20is%20a%20doctring.%20This%20allows%20to%20embed%20documentation%20inside%20the%20class%20definition.%0A%20%20%20%20You%20can%20split%20it%20%0A%20%20%20%20across%20several%20lines.%0A%20%20%20%20%22%22%22%0A%20%20%20%20def%20__init__%28self,%20x%20%3D%200,%20y%20%3D%200%29%3A%20%0A%20%20%20%20%20%20%20%20%22%22%22%20This%20is%20the%20constructor%22%22%22%0A%20%20%20%20%20%20%20%20self.x_%20%3D%20x%20%23%20attribute%20x_%0A%20%20%20%20%20%20%20%20self.y_%20%3D%20y%20%23%20attribute%20y_%0A%20%20%20%20%20%20%20%20%0A%20%20%20%20def%20coordinates%28self%29%3A%0A%20%20%20%20%20%20%20%20return%20self.x_,%20self.y_%0A%20%20%20%20%0A%20%20%20%20def%20__str__%28self%29%3A%0A%20%20%20%20%20%20%20%20%22%22%22Cast%20method%20to%20convert%20to%20string%22%22%22%0A%20%20%20%20%20%20%20%20return%20%28f%22Coordinates%20%3A%20%28%20%7Bself.x_%3A25.16e%7D,%20%7Bself.y_%3A25.16e%7D%20%29%22%29%0A%20%20%20%20%20%20%20%20%0A%0Ap1%20%3D%20Point2D%28%29%20%23%20constructs%20a%20point%20with%20default%20internal%20attributes%0Aprint%20%28p1%29%20%23%20Uses%20the%20str%20cast%20method%0A%0Ap2%20%3D%20Point2D%282,%20-3%29%0Aprint%20%28p2%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>"
    ]
   },
   {
@@ -335,7 +467,7 @@
    },
    "outputs": [],
    "source": [
-    "%%file Point3D.py\n",
+    "%%file Point3D.py \n",
     "class Point3D :\n",
     "    \"\"\"This is a doctring. This allows to embed documentation inside the class definition.\n",
     "    You can split it \n",
@@ -352,7 +484,7 @@
     "    \n",
     "    def __str__(self):\n",
     "        \"\"\"Cast method to convert to string\"\"\"\n",
-    "        return (\"Coordinates : ( %25.16e, %25.16e, , %25.16e )\" % (self.x_, self.y_, self.z_))"
+    "        return (f\"Coordinates : ( {self.x_:25.16e}, {self.y_:25.16e}, , {self.z_:25.16e} )\")"
    ]
   },
   {
@@ -382,7 +514,10 @@
     "\n",
     "Dictionaries can be seen as unordered sets of the pairs _key:value_, and are sourrounded by curly braces `{}`. It is posible to delete/acces/add/etc values by using the corresponding key or key/value pair. The `keys()` method for a dictionary returns the keys of that dictionary. To check for a given key, you can use the keyword `in`.\n",
     "\n",
-    "Examples from [Python Dictionaries tutorial](http://docs.python.org/2/tutorial/datastructures.html#dictionaries)"
+    "Refs:\n",
+    "\n",
+    "- https://realpython.com/python-dicts/\n",
+    "- https://quickref.me/python#python-data-types"
    ]
   },
   {
@@ -394,19 +529,21 @@
    "source": [
     "# creates a dictionary with several key:value pairs. Keys are strings\n",
     "tel = {'jack': 4098, 'sape': 4139}  \n",
-    "print (tel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49c540c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print (tel)\n",
     "# acces  by key. If key does not exists, creates a new entry\n",
     "tel['guido'] = 4127 \n",
-    "print (tel)"
+    "print (tel)\n",
+    "# Access by key\n",
+    "print (tel['jack'])\n",
+    "# Delete by key\n",
+    "del tel['sape']    \n",
+    "print (tel)\n",
+    "# key a list of the keys\n",
+    "print(tel.keys())   \n",
+    "# list of values\n",
+    "print(tel.values())\n",
+    "# keys and values\n",
+    "print(tel.items())"
    ]
   },
   {
@@ -416,7 +553,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (tel['jack'])    # Access by key"
+    "%%html\n",
+    "<iframe width=\"800\" height=\"500\" frameborder=\"0\" src=\"https://pythontutor.com/iframe-embed.html#code=%23%20creates%20a%20dictionary%20with%20several%20key%3Avalue%20pairs.%20Keys%20are%20strings%0Atel%20%3D%20%7B'jack'%3A%204098,%20'sape'%3A%204139%7D%20%20%0Aprint%20%28tel%29%0A%23%20acces%20%20by%20key.%20If%20key%20does%20not%20exists,%20creates%20a%20new%20entry%0Atel%5B'guido'%5D%20%3D%204127%20%0Aprint%20%28tel%29%0A%23%20Access%20by%20key%0Aprint%20%28tel%5B'jack'%5D%29%0A%23%20Delete%20by%20key%0Adel%20tel%5B'sape'%5D%20%20%20%20%0Aprint%20%28tel%29%0A%23%20key%20a%20list%20of%20the%20keys%0Aprint%28tel.keys%28%29%29%20%20%20%0A%23%20list%20of%20values%0Aprint%28tel.values%28%29%29%0A%23%20keys%20and%20values%0Aprint%28tel.items%28%29%29&codeDivHeight=400&codeDivWidth=350&cumulative=false&curInstr=0&heapPrimitives=nevernest&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false\"> </iframe>"
    ]
   },
   {
@@ -426,36 +564,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del tel['sape']    # Delete by key\n",
-    "print (tel)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b644c90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tel.keys()   # key a list of the keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "085c3206",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tel.values()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6d794f1",
-   "metadata": {},
-   "source": [
-    "We can also check for key existence:"
+    "for key, val in tel.items():\n",
+    "    print(f\"{key=}, {val=}\")"
    ]
   },
   {
@@ -469,61 +579,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f5efd55",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating a dict by means of dict comprehensions. See the tuple\n",
-    "{x: x**2 for x in (2, 4, 6)}   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8cd3125e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dict(sape=4139, guido=4127, jack=4098)  # Simple strings simplify notation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2e275f7",
-   "metadata": {},
-   "source": [
-    "### Dictionary looping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aed3cddc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "knights = {'gallahad': 'the pure', 'robin': 'the brave'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37f85781",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for k, v in knights.items():\n",
-    "    print (k, v)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c36d0563",
    "metadata": {},
    "source": [
-    "### Exercises (Based on \"A Primer on Scientific Programming with Python\", Lantangen, Springer)"
+    "## Exercises (Based on \"A Primer on Scientific Programming with Python\", Lantangen, Springer)"
    ]
   },
   {
@@ -567,43 +627,10 @@
     "dict = {'A':8, 'B':12, 'C':5, 'D':2, 'E':2}\n",
     "\n",
     "def print_histo(data):\n",
-    "    for k, v in data.iteritems():\n",
-    "        print k, ':', '='*v\n",
+    "    for k, v in data.items():\n",
+    "        print (k, ':', '='*v)\n",
     "        \n",
     "print_histo(dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75093ef7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88164010",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Exercises\n",
-    "1. *Reading a two column file*: Make a program who reads a two column file and stores the first column in a list called `x` and the second one in a list called `y`. Then convert the list to arrays and plot them. Test it with some example file.\n",
-    "2. Extend the previous exercise to be able to read a data file with comments. The comment chracter is supposed to be `#`. Every line starting with `#` should be ignored. Test.\n",
-    "3. Improve exercise 1 and 2 by using the `numpy.loadtxt()` function. You should rerad the documentation. Test and compare.\n",
-    "4. Write a program which prints tabulated data for a given function, but also printing some comments on it using the `#` character. Use the previous program to make sure you can read back the data.\n",
-    "5. Assume that you are given a file which has printed the values $a_0, a_1, \\ldots, a_k$ for the acceleration of a given system at specified intervals of size $\\Delta t$, that is, $t_k = k\\Delta t$. Your task is to read those values and to compute the velocity of the system at some time $t$. To do that remember that the acceleration can be given as $a(t) = v'(t)$. Therefore, to find $v$, you must integrate the acceleration as\n",
-    "\n",
-    "    $v(t) = v(0) + \\int\\limits_0^t d\\tau\\ a(\\tau).$\n",
-    "    \n",
-    "    If $a(t)$ is only known at discrete points, as in this case, you have to approximate the integral. You can use the trapezoidal rule to get\n",
-    "   \n",
-    "    $v(t_k) \\simeq \\Delta t \\left( \\frac{1}{2}a_0 + \\frac{1}{2}a_k + \\sum\\limits_{i=1}^{k-1}a_i \\right), 1 \\le k \\le n-1$.\n",
-    "    \n",
-    "    Assume that $v(0) = 0$. Your program should: Read the values for $a$ from the array. Then, compute the values for velocity and finally plot the acceleration and the velocity as a function of time. Good test cases for this problem are null values for the acceleration, and constant values for the acceleration, whose theoretical solution you already know. The $\\Delta t$ value should be specified at the command line (use the `sys` module to read command line arguments)."
    ]
   }
  ],
