--- a/03-Scipy-NumericalCalculus/Scipy-NumericalCalculus-Integration.ipynb
+++ b/03-Scipy-NumericalCalculus/Scipy-NumericalCalculus-Integration.ipynb
@@ -283,8 +283,28 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# Compute the integral of f(x) = (2/\\sqrt{\\pi}) \\int_0^x e^{-t^2} as a function of x, \n",
+    "# for x \\in [0, 10] in steps of 0.1\n",
+    "# For the integral use n=400\n",
+    "# Compute the relative difference between your results and the exact value \n",
+    "# from scipyspecial.erf, for n=10, 100, 1000\n",
+    "# Plot yout results\n",
+    "def fun(x):\n",
+    "    return 2*np.exp(-x*x)/np.sqrt(np.pi)\n",
+    "\n",
+    "def compute_integral_plot(alg, xmin, xmax, deltax, nbins_integral, algname):\n",
+    "    %matplotlib inline\n",
+    "    fig, ax = plt.subplots()\n",
+    "    for nbins in [10, 100, 1000]:\n",
+    "        x = np.arange(xmin, xmax, deltax)\n",
+    "        y = alg(fun, 0, x, nbins)\n",
+    "        reldiff = np.abs(1 - y/sp.special.erf(x))\n",
+    "        ax.plot(x, reldiff, label=f\"{nbins=}\")\n",
+    "    ax.set_title(f\"{algname}\")\n",
+    "    ax.legend()\n",
+    "    ax.set_yscale(\"log\")\n",
+    "    ax.set_xscale(\"log\")\n",
+    "    "
    ]
   },
   {
@@ -974,7 +994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   },
   "toc": {
    "base_numbering": 1,
