Added updates for numerical integration

--- a/03-Scipy-NumericalCalculus/Scipy-NumericalCalculus-Integration.ipynb
+++ b/03-Scipy-NumericalCalculus/Scipy-NumericalCalculus-Integration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3cf2871",
+   "id": "3ab07103",
    "metadata": {},
    "source": [
     "Before you turn this problem in, make sure everything runs as expected. First, **restart the kernel** (in the menubar, select Kernel$\\rightarrow$Restart) and then **run all cells** (in the menubar, select Cell$\\rightarrow$Run All).\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98167174",
+   "id": "4a1e81b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8876e9fe",
+   "id": "03364e01",
    "metadata": {},
    "source": [
     "---"
@@ -37,7 +37,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "ac7641634f547d468428abf329ed7ea8",
+     "checksum": "dd0382215a3ffb666127f1b6c17c0f2b",
      "grade": false,
      "grade_id": "cell-81e4b1ca3af83e58",
      "locked": true,
@@ -52,7 +52,7 @@
     "Based on : \n",
     "- J.R. Johansson (robert@riken.jp) http://dml.riken.jp/~rob/\n",
     "- Computational physics; Mark newuman\n",
-    "- Computational Physocs; Landau, Paez, Bordeianu\n",
+    "- Computational Physics; Landau, Paez, Bordeianu\n",
     "- Heath, scientific computing\n"
    ]
   },
@@ -105,11 +105,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ca19eb0",
+   "id": "42ef9400",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-24T22:32:47.079552Z",
-     "start_time": "2022-08-24T22:32:47.071765Z"
+     "end_time": "2022-08-26T13:37:12.524419Z",
+     "start_time": "2022-08-26T13:37:01.709590Z"
     },
     "deletable": false,
     "editable": false,
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "081479a6",
+   "id": "c9dc4273",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46210a27",
+   "id": "dc941ace",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -194,17 +194,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2221cf3a",
+   "id": "b3fe70ac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-25T14:22:52.221781Z",
-     "start_time": "2022-08-25T14:22:52.213600Z"
+     "end_time": "2022-08-26T13:37:17.868880Z",
+     "start_time": "2022-08-26T13:37:17.863105Z"
     },
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "7375d337082a023e7cee2e0d0c4b38c5",
+     "checksum": "bf4e75d2afe3437647d60659ed6fcbca",
      "grade": false,
      "grade_id": "cell-144cb234e8702709",
      "locked": true,
@@ -228,24 +228,23 @@
     "    result = dx*(0.5*f(xk[0]) + np.sum(f(xk[1:-1])) + 0.5*f(xk[-1]))\n",
     "    return result\n",
     "\n",
-    "\n",
     "trapezoid = np.vectorize(trapezoid) # magic to allow to receive vectorized limits"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1f68812",
+   "id": "532cab13",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-25T03:44:09.522104Z",
-     "start_time": "2022-08-25T03:44:09.507651Z"
+     "end_time": "2022-08-26T13:37:19.868969Z",
+     "start_time": "2022-08-26T13:37:19.864194Z"
     },
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "9e3eec688c49bd16b1ae2e399d3c18e2",
+     "checksum": "11e32dd1f8a378ce49d77d1f983af9b9",
      "grade": false,
      "grade_id": "cell-3701f69337a43d9f",
      "locked": true,
@@ -257,17 +256,31 @@
    "outputs": [],
    "source": [
     "print(trapezoid(np.square, 0, 1, 10))\n",
-    "print(trapezoid(np.square, 0, [1, 2], 10)) # Check , two limits for two integrals\n"
+    "print(trapezoid(np.square, 0, [1, 2], 10)) # Check , two limits for two integrals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37c40843",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "f(x) = \\int_0^x e^{-t^2} dt\n",
+    "\\end{equation}\n",
+    "\n",
+    "$x \\in [0, 10]$, $\\Delta x = 0.1$\n",
+    "\n",
+    "$f(x=0), f(x=0+0.1), f(x=0+2*0.1), f(x=0+3*0.1), \\ldots$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f260b48",
+   "id": "5d9c4746",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-25T16:14:26.647940Z",
-     "start_time": "2022-08-25T16:14:26.634206Z"
+     "end_time": "2022-08-26T13:37:22.643242Z",
+     "start_time": "2022-08-26T13:37:22.636203Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -283,44 +296,24 @@
    },
    "outputs": [],
    "source": [
-    "# Compute the integral of f(x) = (2/\\sqrt{\\pi}) \\int_0^x e^{-t^2} as a function of x, \n",
-    "# for x \\in [0, 10] in steps of 0.1\n",
-    "# For the integral use n=400\n",
-    "# Compute the relative difference between your results and the exact value \n",
-    "# from scipyspecial.erf, for n=10, 100, 1000\n",
-    "# Plot yout results\n",
-    "def fun(x):\n",
-    "    return 2*np.exp(-x*x)/np.sqrt(np.pi)\n",
-    "\n",
-    "def compute_integral_plot(alg, xmin, xmax, deltax, nbins_integral, algname):\n",
-    "    %matplotlib inline\n",
-    "    fig, ax = plt.subplots()\n",
-    "    for nbins in [10, 100, 1000]:\n",
-    "        x = np.arange(xmin, xmax, deltax)\n",
-    "        y = alg(fun, 0, x, nbins)\n",
-    "        reldiff = np.abs(1 - y/sp.special.erf(x))\n",
-    "        ax.plot(x, reldiff, label=f\"{nbins=}\")\n",
-    "    ax.set_title(f\"{algname}\")\n",
-    "    ax.legend()\n",
-    "    ax.set_yscale(\"log\")\n",
-    "    ax.set_xscale(\"log\")\n",
-    "    "
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ecad90",
+   "id": "5b31b803",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-25T16:14:27.427504Z",
-     "start_time": "2022-08-25T16:14:27.017744Z"
+     "end_time": "2022-08-26T13:40:29.264833Z",
+     "start_time": "2022-08-26T13:40:29.075747Z"
     },
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "ae0b3fa5f6609dd0387a8877b3db3783",
+     "checksum": "92ce0cfafde49761b03fe25e9ead9282",
      "grade": false,
      "grade_id": "cell-752217cfaecf58f9",
      "locked": true,
@@ -333,12 +326,12 @@
    "source": [
     "#print(trapezoid(lambda x: 2*np.exp(-x*x)/np.sqrt(np.pi), 0, 5, 100))\n",
     "#print(trapezoid(fun, 0, 5, 100))\n",
-    "compute_integral_plot(trapezoid, 0.1, 0.3, 0.01, 500, \"Trapezoid\")"
+    "compute_integral_plot(trapezoid, 0.1, 10.0, 0.1, 500, \"Trapezoid\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a09fcdee",
+   "id": "18e71430",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -374,11 +367,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba0cba6",
+   "id": "76c6224e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-25T16:10:43.565884Z",
-     "start_time": "2022-08-25T16:10:43.554936Z"
+     "end_time": "2022-08-26T13:54:58.854819Z",
+     "start_time": "2022-08-26T13:54:58.849503Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -415,17 +408,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5760995",
+   "id": "2d3da8bb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-25T16:10:44.096540Z",
-     "start_time": "2022-08-25T16:10:44.085572Z"
+     "end_time": "2022-08-26T13:55:28.260269Z",
+     "start_time": "2022-08-26T13:55:28.256201Z"
     },
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "0ab31e40835eff117222cb145624d9be",
+     "checksum": "882f727907fcaaa3b41979d5a21c0eef",
      "grade": false,
      "grade_id": "cell-424c1ea1e234a7f1",
      "locked": true,
@@ -436,24 +429,24 @@
    },
    "outputs": [],
    "source": [
-    "print(simpson(np.square, 0, 1, 80))\n",
+    "print(simpson(np.square, 0, 1, 10))\n",
     "print(simpson(np.square, 0, [1, 2], 10)) # Check , two limits for two integrals"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9753f7c",
+   "id": "becdaeb8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-25T16:14:37.560560Z",
-     "start_time": "2022-08-25T16:14:37.366891Z"
+     "end_time": "2022-08-26T13:55:55.750344Z",
+     "start_time": "2022-08-26T13:55:55.537741Z"
     },
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "c821e0ff07f10ecfb2bae2a49489ec2d",
+     "checksum": "273785dfce01222ad607185e46de6824",
      "grade": false,
      "grade_id": "cell-2b2fb91ad9463fb0",
      "locked": true,
@@ -465,12 +458,12 @@
    "outputs": [],
    "source": [
     "# Let's plot the same as for the trapezoidal rule\n",
-    "compute_integral_plot(simpson, 0.1, 0.3, 0.01, 500, \"Simpson\")"
+    "compute_integral_plot(simpson, 0.1, 10, 0.1, 500, \"Simpson\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2483a660",
+   "id": "2e779bc5",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -494,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa50b04",
+   "id": "7c23d49b",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -520,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee257cf",
+   "id": "9b7a1266",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -542,11 +535,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b93d89c1",
+   "id": "38514fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-25T16:44:39.732955Z",
-     "start_time": "2022-08-25T16:44:39.722399Z"
+     "end_time": "2022-08-26T13:59:11.473971Z",
+     "start_time": "2022-08-26T13:59:11.468725Z"
     },
     "deletable": false,
     "editable": false,
@@ -572,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c9cac52",
+   "id": "8cc82181",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-25T16:56:48.569779Z",
@@ -602,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85bceadd",
+   "id": "bfdd1c2e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-25T17:04:23.654313Z",
@@ -639,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b0177e0",
+   "id": "b4b1930a",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -667,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79a9b701",
+   "id": "65082fe1",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -689,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70f6a6d",
+   "id": "cca49380",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -712,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94a8f88b",
+   "id": "3155f9d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-25T18:10:08.950009Z",
@@ -752,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51feed9a",
+   "id": "d58797a7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-08-25T18:10:21.114092Z",
@@ -779,13 +772,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac6a170d",
+   "id": "594aa2e0",
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "c271e84152c75f3a64ba71fbb45df810",
+     "checksum": "0821a415733e447028799b3ac52441c8",
      "grade": false,
      "grade_id": "cell-316a4632a99a78e6",
      "locked": true,
@@ -800,7 +793,7 @@
     "\\begin{equation}\n",
     "I(r) = \\left(\\frac{J_1(kr)}{kr} \\right)^2,\n",
     "\\end{equation}\n",
-    "where $r$ is the distance from the center, $k=2\\pi/lambda$, with $\\lambda$ is the wavelenght, and $J_1(x)$ is a Bessel function. The Bessel functions can be computed as\n",
+    "where $r$ is the distance from the center, $k=2\\pi/\\lambda$, with $\\lambda$ is the wavelenght, and $J_1(x)$ is a Bessel function. The Bessel functions can be computed as\n",
     "\\begin{equation}\n",
     "J_m(x) = \\frac{1}{\\pi} \\int_0^\\pi \\cos(m\\theta - x\\sin\\theta) d\\theta,\n",
     "\\end{equation}\n",
@@ -812,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d87a9fa",
+   "id": "85053094",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -834,13 +827,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eb423e3",
+   "id": "b7646c3a",
    "metadata": {
     "deletable": false,
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "934012250f13fa1b158ba447d18f43cc",
+     "checksum": "adeb7cf2df6b697edc64e9c37f725c42",
      "grade": false,
      "grade_id": "cell-0e201650c73f3b5c",
      "locked": true,
@@ -855,7 +848,7 @@
     "\\begin{equation}\n",
     "C_V(T) = 9 V\\rho k_B \\left(\\frac{T}{\\theta_0} \\right)^3 \\int_0^{\\theta_D/T} \\frac{x^4 e^x}{(e^x-1)^2}dx, \n",
     "\\end{equation}\n",
-    "where $V$ is the solid volume, $\\rho$ the atom nuber density, $k_B$ the Boltxmann's constant, and $\\theta_D$ is the Debye temperature. \n",
+    "where $V$ is the solid volume, $\\rho$ the atom nuber density, $k_B$ the Boltzmann's constant, and $\\theta_D$ is the Debye temperature. \n",
     "\n",
     "Create a plot of $C_V(T)$, from $T = 5$ K up to $T=500$ K. Use a sample of 1000 cm$^2$ of solid aluminum, which has $\\rho = 6.022\\times 10^{28}$ m$^{-3}$, and a Debye temperature of $\\theta_D = 428$ K.  "
    ]
@@ -863,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9248cb1c",
+   "id": "7876648f",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -885,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86abfa2f",
+   "id": "6a46c75c",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -908,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15a30335",
+   "id": "e9327aa2",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -930,7 +923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "343244a0",
+   "id": "4fd6a865",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -957,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68bcd9dc",
+   "id": "80fdfeb3",
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1005,9 +998,44 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "256px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "toc-autonumbering": true,
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
