--- a/04-LinearAlgebra/LinearAlgebra.ipynb
+++ b/04-LinearAlgebra/LinearAlgebra.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T16:24:20.727545Z",
@@ -178,7 +178,25 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "Matrix : \n",
+      " [[1 2]\n",
+      " [3 4]]\n",
+      "Matrix : \n",
+      " [[1 2]\n",
+      " [3 4]]\n",
+      "A[1,0] : \n",
+      " 3\n",
+      "A[1][0] : \n",
+      " 3\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "A = np.array([[1, 2],  # primera fila, indice es 0\n",
@@ -206,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T16:28:47.154588Z",
@@ -216,7 +234,24 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6  1]\n",
+      " [ 0 28]]\n",
+      "[[ 5 -2]\n",
+      " [-9 96]]\n",
+      "[[ 0.2        -2.        ]\n",
+      " [-1.          0.16666667]]\n",
+      "0.2\n",
+      "-2.0\n",
+      "[[1. 1.]\n",
+      " [1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.array([[1, 2],[3, 4]])\n",
@@ -247,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T16:36:51.093105Z",
@@ -257,7 +292,17 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution: \n",
+      " [41.202 55.917 71.613]\n",
+      "Delta: 9.779711566628324e-13\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -268,30 +313,48 @@
     "x = np.linalg.solve(A, b) # magic\n",
     "print(\"Solution: \\n\", x)\n",
     "# confirm\n",
-    "print(\"Delta:\\n\", A.dot(x) - b)"
+    "eps = np.linalg.norm(A.dot(x) - b)\n",
+    "print(f\"Delta: {eps}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T16:43:08.461496Z",
      "start_time": "2020-09-05T16:43:08.311563Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time = 1.204518570995424\n"
+     ]
+    }
+   ],
    "source": [
+    "# %%timeit\n",
+    "import time\n",
     "import numpy as np\n",
     "\n",
-    "#np.random.seed(10) # Play with this value\n",
+    "np.random.seed(10) # Play with this value\n",
     "\n",
-    "N = 1000\n",
+    "N = 5000\n",
+    "NREPS = 10\n",
     "\n",
-    "A = np.random.rand(N,N)\n",
-    "b = np.random.rand(N)\n",
-    "x = np.linalg.solve(A, b) # magic\n",
-    "print(\"Solution: \\n\", x[:10])\n",
+    "total = 0.0\n",
+    "for ii in range(NREPS):\n",
+    "    A = np.random.rand(N,N)\n",
+    "    b = np.random.rand(N)\n",
+    "    start = time.perf_counter()\n",
+    "    x = np.linalg.solve(A, b) # magic\n",
+    "    end = time.perf_counter()\n",
+    "    total += (end-start)\n",
+    "print(f\"time = {(total)/NREPS}\")\n",
+    "#print(\"Solution: \\n\", x[:10])\n",
     "# confirm\n",
     "#print(\"Delta:\\n\", A.dot(x) - b)"
    ]
@@ -529,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T17:11:16.144181Z",
@@ -539,7 +602,22 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 1e+03 ns, total: 3 µs\n",
+      "Wall time: 5.96 µs\n",
+      "B : \n",
+      " [[-2.   1. ]\n",
+      " [ 1.5 -0.5]]\n",
+      "A A^-1 : \n",
+      " [[1.0000000e+00 0.0000000e+00]\n",
+      " [8.8817842e-16 1.0000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "%time\n",
     "from scipy import linalg\n",
@@ -547,26 +625,35 @@
     "A = np.array([[1., 2.], \n",
     "              [3., 4.]])\n",
     "B = linalg.inv(A) # magic\n",
-    "#print(\"B : \\n\", B)\n",
+    "print(\"B : \\n\", B)\n",
     "# verify\n",
-    "#print(\"A A^-1 : \\n\", A.dot(B))"
+    "print(\"A A^-1 : \\n\", A.dot(B))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T17:20:14.621365Z",
      "start_time": "2020-09-05T17:20:14.571632Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6min 33s, sys: 2.62 s, total: 6min 36s\n",
+      "Wall time: 54.5 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from scipy import linalg\n",
     "import numpy as np\n",
-    "N = 1000\n",
+    "N = 10000\n",
     "A = np.random.rand(N, N)\n",
     "B = linalg.inv(A) # magic\n",
     "#print(\"B : \\n\", B)\n",
@@ -601,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T17:23:33.355607Z",
@@ -611,14 +698,24 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kappa = 2.000005000005\n",
+      "np.linalg.cond(A)=1.0022385704955787\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy import linalg\n",
     "import numpy as np\n",
     "A = np.array([[1.001, 0.001],\n",
     "                [0.000, 0.999]])\n",
     "kappa = linalg.norm(A)*linalg.norm(linalg.inv(A))\n",
-    "print(f\"{kappa = }\")\n"
+    "print(f\"{kappa = }\")\n",
+    "print(f\"{np.linalg.cond(A)=}\")\n"
    ]
   },
   {
@@ -654,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T17:29:48.031729Z",
@@ -664,7 +761,19 @@
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigen-values:  [0.+1.j 0.-1.j]\n",
+      "Eigen-vectors:\n",
+      " [[0.70710678+0.j         0.70710678-0.j        ]\n",
+      " [0.        -0.70710678j 0.        +0.70710678j]]\n",
+      "Verification:  [0.+0.j 0.+0.j]\n"
+     ]
+    }
+   ],
    "source": [
     "# See : https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.eig.html#scipy.linalg.eig\n",
     "import numpy as np\n",
